--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -32,8 +32,8 @@
                 <mat-icon style="color:#76d354;">grade</mat-icon>
                 <mat-radio-button value="grade">
                 </mat-radio-button>
-                <mat-icon style="color:#e6ad11;">battery_full</mat-icon>
-                <mat-radio-button value="battery_full">
+                <mat-icon style="color:#e6ad11;">settings_cell</mat-icon>
+                <mat-radio-button value="settings_cell">
                 </mat-radio-button>
             </mat-radio-group>
             <hr>
