--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -3,7 +3,7 @@
         [(dragulaModel)]="bmxPages[currentPage].page" (dragulaModelChange)="checkDragEvetn($event);">
 
 
-        <!-- BRAND MATRIX MODULAR LEGO TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
+        <!-- BRAND MATRIX MODULAR TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
         <div *ngFor="let bmxItem of bmxPages[currentPage].page; let i = index"
             style="display: flex;flex-direction: column;margin: 10px;align-content: center;">
 
@@ -13,9 +13,9 @@
             <div *ngIf="bmxItem.componentType === 'logo-header'" class="header">
 
                 <div class="emoji-handle">.</div>
-               
+
                 <div>
-                    
+
                     <img style="width: 231px;margin-left: 8px;    margin-top: 60px;"
                         src="./assets/img/bmx/BRANDMATRIX-DASHBOARD-LOGO.svg">
 
@@ -119,7 +119,7 @@
         </div>
 
 
-        <!-- PAGE BUTTONS AND DIRECTIONS -->
+        <!-- PAGE BUTTONS AND DIRECTIONS 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
         <div class="page-buttons">
             <div class="page-buttons" style="position: fixed;bottom: 40px;">
                 <button (click)="changePage('previous')" mat-icon-button>
@@ -137,7 +137,7 @@
                 </button>
             </div>
         </div>
-
+        <!-- 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲 END PAGE BUTTONS AND DIRECTIONS -->
 
         <!-- END 🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 BRAND MATRIX MODULAR LEGO TEMPLATE COMPONENTS   -->
     </div>
@@ -169,4 +169,31 @@
             </button>
         </div>
     </div>
+</div>
+
+
+<div *ngIf="!isTemplateBoxOn" class="save-template-box"
+    style="display: flex;flex-direction: column;align-items: center;justify-content: space-around;">
+    <h2 style="text-align: center;padding-top: 5px;color: #2a3f8a;">{{templateTitle}}</h2>
+
+    <mat-form-field appearance="outline">
+        <mat-label>Template Name</mat-label>
+        <input matInput [(ngModel)]="templateName" placeholder="New Name">
+        <button *ngIf="templateName" matSuffix mat-icon-button aria-label="Clear" (click)="templateName=''">
+            <mat-icon>close</mat-icon>
+          </button>
+    </mat-form-field>
+    <p style="text-align: center;color: grey;" *ngIf="templateName.length == 0">or pick one to update</p>
+    <mat-form-field *ngIf="templateName.length == 0" appearance="outline">
+        <mat-label>Templates</mat-label>
+        <mat-select [(ngModel)]="templateName" >
+            <mat-option *ngFor="let template of TEMPLATES " [value]="template">
+                {{template}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <button  mat-raised-button style="color: white;background-color: #2a3f8a">
+        {{templateButtonTitle}}
+    </button>
+  
 </div>
