--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -14,18 +14,18 @@
 
 /* Track */
 .odd-style::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background: white;
 }
 
 /* Handle */
 .odd-style::-webkit-scrollbar-thumb {
-    background: rgb(7, 177, 58);
+    background: #f1f1f1;
     border-radius: 10px;
 }
 
 /* Handle on hover */
 .odd-style::-webkit-scrollbar-thumb:hover {
-    background: #b30000;
+    background: #283e90;
 }
 
 .rating-text {
