--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -147,7 +147,7 @@
     <div class="project-info" *ngIf="isMenuActive11" style="border: pink solid 1px; width: 25%; height: 100vh;">
 
         <div style="display: flex;flex-direction: column;margin-top: 50px;">
-            <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="add paragraph"
+            <button (click)="createNewBmxComponent('logo-header')" mat-icon-button matTooltip="add header"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">account_circle</mat-icon>
             </button>
