templates box in progress

--- a/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -171,6 +171,11 @@
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">library_add</mat-icon>
             </button>
+            <button *ngIf="true" (click)="resetTemplate()" mat-icon-button matTooltip="reset template"
+                matTooltipPosition="right">
+                <mat-icon class="full-icon">delete_sweep
+                </mat-icon>
+            </button>
         </div>
     </div>
 </div>
